--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
   padding: 5px 10px;
   cursor: pointer;
   background-color: #3498db;
-  color: #fff;
+  color: #000000;
   border: none;
   border-radius: 50%;
 }
